python/ReaffirmParser.py
# Generated from Reaffirm.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ReaffirmParser ( Parser ):

    grammarFileName = "Reaffirm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'='", "','", "'formode'", 
                     "'fortran'", "'if'", "'then'", "'else'", "'('", "')'", 
                     "'.'", "'local'", "'input'", "'output'", "'param'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "STRING", "BOOLOP", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_block = 2
    RULE_expr = 3
    RULE_assign = 4
    RULE_exprList = 5
    RULE_forloop = 6
    RULE_ifstat = 7
    RULE_funcall = 8
    RULE_fieldref = 9
    RULE_methodref = 10
    RULE_objref = 11
    RULE_varDecl = 12
    RULE_types = 13
    RULE_bexpr = 14

    ruleNames =  [ "prog", "stat", "block", "expr", "assign", "exprList", 
                   "forloop", "ifstat", "funcall", "fieldref", "methodref", 
                   "objref", "varDecl", "types", "bexpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    ID=17
    STRING=18
    BOOLOP=19
    NEWLINE=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.StatContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.StatContext,i)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ReaffirmParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.stat()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReaffirmParser.T__4) | (1 << ReaffirmParser.T__5) | (1 << ReaffirmParser.T__6) | (1 << ReaffirmParser.T__12) | (1 << ReaffirmParser.T__13) | (1 << ReaffirmParser.T__14) | (1 << ReaffirmParser.T__15) | (1 << ReaffirmParser.ID) | (1 << ReaffirmParser.STRING) | (1 << ReaffirmParser.NEWLINE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ReaffirmParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondtionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifstat(self):
            return self.getTypedRuleContext(ReaffirmParser.IfstatContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondtion" ):
                return visitor.visitCondtion(self)
            else:
                return visitor.visitChildren(self)


    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(ReaffirmParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assign(self):
            return self.getTypedRuleContext(ReaffirmParser.AssignContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class LoopContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forloop(self):
            return self.getTypedRuleContext(ReaffirmParser.ForloopContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ReaffirmParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(ReaffirmParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = ReaffirmParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ReaffirmParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.expr()
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.match(ReaffirmParser.NEWLINE)


                pass

            elif la_ == 2:
                localctx = ReaffirmParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.assign()
                pass

            elif la_ == 3:
                localctx = ReaffirmParser.LoopContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.forloop()
                pass

            elif la_ == 4:
                localctx = ReaffirmParser.CondtionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.ifstat()
                pass

            elif la_ == 5:
                localctx = ReaffirmParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.match(ReaffirmParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.StatContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.StatContext,i)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ReaffirmParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ReaffirmParser.T__0)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReaffirmParser.T__4) | (1 << ReaffirmParser.T__5) | (1 << ReaffirmParser.T__6) | (1 << ReaffirmParser.T__12) | (1 << ReaffirmParser.T__13) | (1 << ReaffirmParser.T__14) | (1 << ReaffirmParser.T__15) | (1 << ReaffirmParser.ID) | (1 << ReaffirmParser.STRING) | (1 << ReaffirmParser.NEWLINE))) != 0):
                self.state = 46
                self.stat()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(ReaffirmParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ReaffirmParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ObjectRefContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def objref(self):
            return self.getTypedRuleContext(ReaffirmParser.ObjrefContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectRef" ):
                return visitor.visitObjectRef(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ReaffirmParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcall(self):
            return self.getTypedRuleContext(ReaffirmParser.FuncallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class VarDecContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ReaffirmParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDecl(self):
            return self.getTypedRuleContext(ReaffirmParser.VarDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = ReaffirmParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ReaffirmParser.FunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.funcall()
                pass

            elif la_ == 2:
                localctx = ReaffirmParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(ReaffirmParser.ID)
                pass

            elif la_ == 3:
                localctx = ReaffirmParser.ObjectRefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.objref()
                pass

            elif la_ == 4:
                localctx = ReaffirmParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(ReaffirmParser.STRING)
                pass

            elif la_ == 5:
                localctx = ReaffirmParser.VarDecContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.varDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ReaffirmParser.ExprContext,0)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = ReaffirmParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ReaffirmParser.ID)
            self.state = 62
            self.match(ReaffirmParser.T__2)
            self.state = 63
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.ExprContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.ExprContext,i)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_exprList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = ReaffirmParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.expr()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ReaffirmParser.T__3:
                self.state = 66
                self.match(ReaffirmParser.T__3)
                self.state = 67
                self.expr()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForloopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(ReaffirmParser.AssignContext,0)


        def block(self):
            return self.getTypedRuleContext(ReaffirmParser.BlockContext,0)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_forloop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForloop" ):
                return visitor.visitForloop(self)
            else:
                return visitor.visitChildren(self)




    def forloop(self):

        localctx = ReaffirmParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forloop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not(_la==ReaffirmParser.T__4 or _la==ReaffirmParser.T__5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 74
            self.assign()
            self.state = 75
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.StatContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.StatContext,i)


        def expr(self):
            return self.getTypedRuleContext(ReaffirmParser.ExprContext,0)


        def bexpr(self):
            return self.getTypedRuleContext(ReaffirmParser.BexprContext,0)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_ifstat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)




    def ifstat(self):

        localctx = ReaffirmParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ReaffirmParser.T__6)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 78
                self.expr()
                pass

            elif la_ == 2:
                self.state = 79
                self.bexpr()
                pass


            self.state = 82
            self.match(ReaffirmParser.T__7)
            self.state = 83
            self.stat()
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 84
                self.match(ReaffirmParser.T__8)
                self.state = 85
                self.stat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def exprList(self):
            return self.getTypedRuleContext(ReaffirmParser.ExprListContext,0)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_funcall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncall" ):
                return visitor.visitFuncall(self)
            else:
                return visitor.visitChildren(self)




    def funcall(self):

        localctx = ReaffirmParser.FuncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ReaffirmParser.ID)
            self.state = 89
            self.match(ReaffirmParser.T__9)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReaffirmParser.T__12) | (1 << ReaffirmParser.T__13) | (1 << ReaffirmParser.T__14) | (1 << ReaffirmParser.T__15) | (1 << ReaffirmParser.ID) | (1 << ReaffirmParser.STRING))) != 0):
                self.state = 90
                self.exprList()


            self.state = 93
            self.match(ReaffirmParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldrefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def getRuleIndex(self):
            return ReaffirmParser.RULE_fieldref

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldref" ):
                return visitor.visitFieldref(self)
            else:
                return visitor.visitChildren(self)




    def fieldref(self):

        localctx = ReaffirmParser.FieldrefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fieldref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ReaffirmParser.T__11)
            self.state = 96
            self.match(ReaffirmParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodrefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcall(self):
            return self.getTypedRuleContext(ReaffirmParser.FuncallContext,0)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_methodref

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodref" ):
                return visitor.visitMethodref(self)
            else:
                return visitor.visitChildren(self)




    def methodref(self):

        localctx = ReaffirmParser.MethodrefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ReaffirmParser.T__11)
            self.state = 99
            self.funcall()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjrefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def fieldref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.FieldrefContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.FieldrefContext,i)


        def methodref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.MethodrefContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.MethodrefContext,i)


        def getRuleIndex(self):
            return ReaffirmParser.RULE_objref

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjref" ):
                return visitor.visitObjref(self)
            else:
                return visitor.visitChildren(self)




    def objref(self):

        localctx = ReaffirmParser.ObjrefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_objref)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ReaffirmParser.ID)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ReaffirmParser.T__11:
                self.state = 104
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.fieldref()
                    pass

                elif la_ == 2:
                    self.state = 103
                    self.methodref()
                    pass


                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(ReaffirmParser.TypesContext,0)


        def ID(self):
            return self.getToken(ReaffirmParser.ID, 0)

        def getRuleIndex(self):
            return ReaffirmParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ReaffirmParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.types()
            self.state = 110
            self.match(ReaffirmParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ReaffirmParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = ReaffirmParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReaffirmParser.T__12) | (1 << ReaffirmParser.T__13) | (1 << ReaffirmParser.T__14) | (1 << ReaffirmParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReaffirmParser.ExprContext)
            else:
                return self.getTypedRuleContext(ReaffirmParser.ExprContext,i)


        def BOOLOP(self, i:int=None):
            if i is None:
                return self.getTokens(ReaffirmParser.BOOLOP)
            else:
                return self.getToken(ReaffirmParser.BOOLOP, i)

        def getRuleIndex(self):
            return ReaffirmParser.RULE_bexpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBexpr" ):
                return visitor.visitBexpr(self)
            else:
                return visitor.visitChildren(self)




    def bexpr(self):

        localctx = ReaffirmParser.BexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.expr()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ReaffirmParser.BOOLOP:
                self.state = 115
                self.match(ReaffirmParser.BOOLOP)
                self.state = 116
                self.expr()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





